[package]
name = "async-spsc"
version = "0.2.0"
description = "Fast, easy-to-use, async-aware single-producer/single-consumer (SPSC) channel."
authors = ["James Laver <james.laver@gmail.com>"]
edition = "2018"

[features]
default = ["alloc", "async", "ring", "stream"]
alloc = []
async = []
ring = ["atomic-waker"]
stream = ["async", "futures-core"]
bench = ["criterion"]

[dependencies.atomic-waker]
version = "1.0.0"
optional = true

[dependencies.futures-core]
version = "0.3.16"
default-features = false
optional = true

[dependencies.criterion]
version = "0.3"
features = ["real_blackbox"]
optional = true

[dev-dependencies]
dummy-waker = "1"
futures-micro = "1.0.0-rc0"
wookie = "0.3"

[[bench]]
name = "contiguous_async_1"
harness = false
